# TinyEmailClient

./: .gitignore  README.md  TodoList.txt
src/: CMakeLists.txt
src/client/: EmailClientProtoInterface.cpp  EmailClientProtoInterface.h  imap_client_handler.cpp  imap_client_handler.h  imap_main.cpp  imap_recv_mail.cpp  imap_ssl_main.cpp  imap_ssl_recv_mail.cpp  main.cpp  params_struct.h  parse_params_struct.cpp  pop3_client_handler.cpp  pop3_client_handler.h  pop3_main.cpp  pop3_recv_email.cpp  pop3_ssl_main.cpp  pop3_ssl_recv_email.cpp  recv_mail.cpp  recv_mail.h  recv_mail_ssl.cpp  send_mail.cpp  send_mail.h  send_mail_ssl.cpp  smtp_client_handler.cpp  smtp_client_handler.h  smtp_main.cpp  smtp_ssl_main.cpp  ssl_tcp_client.cpp  ssl_tcp_client.h  ssl_tcp_main.cpp
src/include/: CPop3Proto.cpp  CPop3Proto.h  CPop3ServerProto.cpp  CPop3ServerProto.h  CProtoCode.h  ProtoUtil.cpp  ProtoUtil.h  cross_plantform_net.h  email_struct.h
